--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:3.0.0'
         compile 'com.epam.reportportal:commons:3.0.0'
     } else {
-        compile 'com.github.reportportal:commons-model:ef3e95f'
+        compile 'com.github.reportportal:commons-model:28c129'
         compile('com.github.reportportal:commons-dao:c2bf5f')
         compile('com.github.reportportal:commons-rules:3.0.0')
         compile ('com.github.reportportal:commons:develop-SNAPSHOT')
