--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     } else {
         compile 'com.github.reportportal:commons-model:2490535'
         compile('com.github.reportportal:commons-dao:1dcc7ac')
-        compile('com.github.reportportal:commons-rules:3.0.0')
+        compile('com.github.reportportal:commons-rules:6e514cb')
         compile ('com.github.reportportal:commons:develop-SNAPSHOT')
     }
 
