--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ endpoints.info.enabled=true
 endpoints.info.sensitive=false
 endpoints.health.enabled=true
 endpoints.health.sensitive=true
+endpoints.jmx.enabled=true
 
 rp.mongo.host=localhost
 rp.mongo.port=27017
