update logging details

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,7 +29,9 @@ eureka:
     enabled: true
 logging:
   level:
-    BasicMongoPersistentProperty: error
+    org.springframework.data.mongodb.core.mapping: error
+    org.springframework.context.support: warn
+    org.springframework.data.mongodb.core.index: warn
 
 ## Consul as service registry
 ---
