--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=3.0.1-BETA-1
+version=3.0.1-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=tcp://localhost:2375
