--- a/build.gradle
+++ b/build.gradle
@@ -73,14 +73,14 @@ configurations.all {
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:commons-dao:3.0.0'
-        compile 'com.epam.reportportal:commons-rules:3.0.0'
-        compile 'com.epam.reportportal:commons-model:3.0.0'
+        compile 'com.epam.reportportal:commons-dao:3.0.1'
+        compile 'com.epam.reportportal:commons-rules:3.0.1'
+        compile 'com.epam.reportportal:commons-model:3.0.1'
         compile 'com.epam.reportportal:commons:3.0.0'
     } else {
-        compile('com.github.reportportal:commons-dao:1656e4a')
-        compile('com.github.reportportal:commons-rules:6e514cb')
-        compile 'com.github.reportportal:commons-model:94c897d'
+        compile('com.github.reportportal:commons-dao:3.0.1')
+        compile('com.github.reportportal:commons-rules:3.0.1')
+        compile 'com.github.reportportal:commons-model:3.0.1'
         compile ('com.github.reportportal:commons:develop-SNAPSHOT')
     }
 
