update develop dockerfile

--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -14,5 +14,5 @@ ADD @name@-@version@.jar app.jar
 RUN sh -c 'touch /app.jar'
 EXPOSE 8080
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -jar /app.jar"]
 
