--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -6,7 +6,7 @@ LABEL description="@description@"
 
 ENV JAVA_OPTS="-Xmx1g"
 
-RUN apk --no-cache add ttf-droid
+RUN apk --no-cache add ttf-droid ttf-dejavu
 
 VOLUME /tmp
 ADD @name@-@version@.jar app.jar
