--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,7 @@ dependencies {
     //JasperReport's export to XLS uses Apache POI. Reports 6.3.1 needs version NOT
     //higher than 3.14 since 3.15 contains breaking API changes
     compile 'org.apache.poi:poi:3.14'
+    compile 'xml-apis:xml-apis:1.4.01'
 
     compile 'javax.inject:javax.inject:1'
     compile 'com.google.code.findbugs:annotations:3.0.1'
