--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -1,4 +1,4 @@
-FROM openjdk:8-jre-alpine
+FROM openjdk:8-jre
 
 MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
 LABEL version="@version@"
@@ -6,7 +6,9 @@ LABEL description="@description@"
 
 ENV JAVA_OPTS="-Xmx1g"
 
-RUN apk --no-cache add ttf-droid ttf-dejavu
+RUN apt-get update && \
+    apt-get install -y fonts-droid && \
+    rm -rf /var/lib/apt/lists/*
 
 VOLUME /tmp
 ADD @name@-@version@.jar app.jar
