--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,9 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:3.0.1'
         compile 'com.epam.reportportal:commons:3.0.1'
     } else {
-        compile('com.github.reportportal:commons-dao:3.0.1')
+        compile('com.github.reportportal:commons-dao:19f13d1')
         compile('com.github.reportportal:commons-rules:3.0.1')
-        compile 'com.github.reportportal:commons-model:ae32a95'
+        compile 'com.github.reportportal:commons-model:3d3314c'
         compile ('com.github.reportportal:commons:6dbe5c6')
     }
 
