--- a/build.gradle
+++ b/build.gradle
@@ -78,16 +78,16 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:3.0.1'
         compile 'com.epam.reportportal:commons:3.0.1'
     } else {
-        compile('com.github.reportportal:commons-dao:3.0.1')
+        compile('com.github.reportportal:commons-dao:d7b4e37')
         compile('com.github.reportportal:commons-rules:3.0.1')
-        compile 'com.github.reportportal:commons-model:3.0.1'
-        compile ('com.github.reportportal:commons:3.0.1')
+        compile 'com.github.reportportal:commons-model:ae32a95'
+        compile ('com.github.reportportal:commons:6dbe5c6')
     }
 
     compile 'org.jasypt:jasypt:1.9.2'
 
 
-    compile 'commons-fileupload:commons-fileupload:1.3.2'
+    compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-validator:commons-validator:1.6'
     compile 'org.slf4j:slf4j-api:1.7.24'
 
