make consul hostname configurable

--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -31,5 +31,5 @@ spring:
     consul:
       host: registry
       discovery:
-        hostname: api
+        hostname: ${HOSTNAME:api}
         prefer-ip-address: false
