--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=3.0.2-SNAPSHOT
+version=3.1.0-BETA-1
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=tcp://localhost:2375
