--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -9,7 +9,7 @@ ENV APP_DOWNLOAD_URL https://dl.bintray.com/epam/reportportal/com/epam/reportpor
 ENV JAVA_OPTS="-Xmx1g"
 
 RUN apt-get update && \
-    apt-get install -y fonts-droid && \
+    apt-get install -y fonts-droid-fallback && \
     rm -rf /var/lib/apt/lists/*
 
 VOLUME /tmp
