--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -1,6 +1,6 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 
-MAINTAINER Andrei Varabyeu <andrei_varabyeu@epam.com>
+LABEL maintainer="Andrei Varabyeu <andrei_varabyeu@epam.com>"
 LABEL version="@version@"
 LABEL description="@description@"
 
