upd travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 
 script: ./gradlew build --no-daemon --stacktrace
 
+env:
+  global:
+    - GRADLE_OPTS=“-Xms128m -Xmx2g”
+
 jdk:
   - oraclejdk8
 
