--- a/build.gradle
+++ b/build.gradle
@@ -242,3 +242,12 @@ test {
         }
     }
 }
+
+
+if (System.env.TRAVIS == 'true') {
+    tasks.withType(Test) {
+        // containers (currently) have 2 dedicated cores and 4GB of memory
+        maxParallelForks = 2
+        minHeapSize = '128m'
+    }
+}
