upd travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script: ./gradlew build --no-daemon --stacktrace
 
 env:
   global:
-    - GRADLE_OPTS=“-Xms128m -Xmx2g”
+    - GRADLE_OPTS="-Xms128m -Xmx2g"
 
 jdk:
   - oraclejdk8
