--- a/build.gradle
+++ b/build.gradle
@@ -248,6 +248,7 @@ if (System.env.TRAVIS == 'true') {
     tasks.withType(Test) {
         // containers (currently) have 2 dedicated cores and 4GB of memory
         maxParallelForks = 2
-        minHeapSize = '128m'
+        minHeapSize = "128m"
+        maxHeapSize = "2g"
     }
 }
