--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,8 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven { url "http://dl.bintray.com/epam/reportportal" }
-//    maven { url "http://jasperreports.sourceforge.net/maven2" }
-//    maven { url "http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts" }
+    maven { url "http://jasperreports.sourceforge.net/maven2" }
+    maven { url "http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts" }
     if (!releaseMode) {
         maven { url 'https://jitpack.io' }
     }
