--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.0.RELEASE"
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
-        classpath 'com.bmuschko:gradle-docker-plugin:3.0.4'
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE")
+        classpath 'com.bmuschko:gradle-docker-plugin:3.0.12'
     }
 }
 
@@ -58,17 +58,13 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Dalston.SR1"
-        mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.4.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Dalston.SR2"
+        mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.6.RELEASE"
     }
 }
 
 configurations {
     api
-}
-
-configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 dependencies {
@@ -78,7 +74,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:3.1.1'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:3.1.1')
+        compile('com.github.reportportal:commons-dao:a9ae74c')
         compile('com.github.reportportal:commons-rules:3.1.0')
         compile 'com.github.reportportal:commons-model:3.1.1'
         compile ('com.github.reportportal:commons:3.1.0')
@@ -156,7 +152,7 @@ task staticResources(type: Copy) {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.0'
+    gradleVersion = '4.0.2'
 }
 
 //Start section for external jacoco test report
