travis memory issue fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 
 script: ./gradlew build --stacktrace
 
+env:
+   global:
+   - GRADLE_OPTS="-Xms128m -Xmx1g"
+
 jdk:
   - oraclejdk8
 
