--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ dependencies {
         compile('com.github.reportportal:commons-dao:a9ae74c')
         compile('com.github.reportportal:commons-rules:3.1.0')
         compile 'com.github.reportportal:commons-model:3.1.1'
-        compile ('com.github.reportportal:commons:3.1.0')
+        compile('com.github.reportportal:commons:3.1.0')
     }
 
     compile 'org.jasypt:jasypt:1.9.2'
@@ -236,5 +236,11 @@ test {
                 logger.quiet("Passed Code Coverage Checks")
             }
         }
+    }
+
+    if (System.env.TRAVIS == 'true') {
+        maxParallelForks = 2
+        minHeapSize = "128m"
+        maxHeapSize = "1g"
     }
 }
