--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -10,7 +10,7 @@ RUN apt-get update && \
     apt-get install -y fonts-noto && \
     rm -rf /var/lib/apt/lists/*
 
-RUN wget https://raw.githubusercontent.com/reportportal/reportportal/master/scripts/start.sh /start.sh && \
+RUN wget -O /start.sh https://raw.githubusercontent.com/reportportal/reportportal/master/scripts/start.sh && \
     chmod +x /start.sh
 
 VOLUME /tmp
