--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -10,8 +10,8 @@ RUN apt-get update && \
     apt-get install -y fonts-noto && \
     rm -rf /var/lib/apt/lists/*
 
-RUN wget -O /start.sh https://raw.githubusercontent.com/reportportal/reportportal/master/scripts/start.sh && \
-    chmod +x /start.sh
+RUN sh -c "echo $'#!/bin/sh \n\
+exec java $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /start.sh"
 
 VOLUME /tmp
 ENV JAVA_APP=/app.jar
