--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -6,14 +6,19 @@ LABEL description="@description@"
 
 ENV APP_FILE @name@-@version@
 ENV APP_DOWNLOAD_URL https://dl.bintray.com/epam/reportportal/com/epam/reportportal/@name@/@version@/$APP_FILE.jar
-ENV JAVA_OPTS="-Xmx1g"
+ENV JAVA_OPTS="-Xmx1g -Djava.security.egd=file:/dev/./urandom -jar"
 
 RUN apt-get update && \
     apt-get install -y fonts-noto && \
     rm -rf /var/lib/apt/lists/*
 
+RUN sh -c "echo $'#!/bin/sh \n\
+exec java $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /start.sh"
+
 VOLUME /tmp
-RUN wget -O /app.jar $APP_DOWNLOAD_URL
+
+ENV JAVA_APP=/app.jar
+RUN wget -O $JAVA_APP $APP_DOWNLOAD_URL
 
 EXPOSE 8080
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+ENTRYPOINT ["/start.sh"]
