--- a/Dockerfile-develop
+++ b/Dockerfile-develop
@@ -5,18 +5,18 @@ LABEL version="@version@"
 LABEL description="@description@"
 
 ENV JAVA_OPTS="-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp"
+ENV JAVA_APP=/app.jar
 
 RUN apt-get update && \
     apt-get install -y fonts-noto && \
     rm -rf /var/lib/apt/lists/*
 
-RUN wget -O /start.sh https://raw.githubusercontent.com/reportportal/reportportal/master/scripts/start.sh && \
-    chmod +x /start.sh
+RUN sh -c "echo $'#!/bin/sh \n\
+exec java $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /start.sh"
 
 VOLUME /tmp
-ENV JAVA_APP=/app.jar
 
-ADD @name@-@version@.jar app.jar
+ADD libs/service-api-3.1.1-SNAPSHOT.jar app.jar
 RUN sh -c 'touch /app.jar'
 
 EXPOSE 8080
