--- a/build.gradle
+++ b/build.gradle
@@ -74,9 +74,9 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:3.1.1'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:a9ae74c')
+        compile('com.github.reportportal:commons-dao:eba5abb')
         compile('com.github.reportportal:commons-rules:3.1.1')
-        compile 'com.github.reportportal:commons-model:3.1.1'
+        compile 'com.github.reportportal:commons-model:19407ae'
         compile ('com.github.reportportal:commons:3.1.0')
     }
 
