--- a/build.gradle
+++ b/build.gradle
@@ -69,14 +69,14 @@ configurations {
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:commons-dao:3.1.2'
+        compile 'com.epam.reportportal:commons-dao:3.1.1'
         compile 'com.epam.reportportal:commons-rules:3.1.1'
         compile 'com.epam.reportportal:commons-model:3.1.1'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:3.1.2')
+        compile('com.github.reportportal:commons-dao:8eaebb2')
         compile('com.github.reportportal:commons-rules:3.1.1')
-        compile 'com.github.reportportal:commons-model:3.1.1'
+        compile 'com.github.reportportal:commons-model:1f903fa'
         compile ('com.github.reportportal:commons:3.1.0')
     }
 
@@ -236,5 +236,11 @@ test {
                 logger.quiet("Passed Code Coverage Checks")
             }
         }
+    }
+
+    if (System.env.TRAVIS == 'true') {
+            maxParallelForks = 2
+            minHeapSize = "128m"
+            maxHeapSize = "1g"
     }
 }
