--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=3.2.0-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
-dockerServerUrl=tcp://localhost:2375
+dockerServerUrl=UNIX:/var/run/docker.sock
 org.gradle.jvmargs=-Xmx2048m
