--- a/build.gradle
+++ b/build.gradle
@@ -69,12 +69,12 @@ configurations {
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:commons-dao:3.2.0'
+        compile 'com.epam.reportportal:commons-dao:3.2.1'
         compile 'com.epam.reportportal:commons-rules:3.2.0'
         compile 'com.epam.reportportal:commons-model:3.2.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:1674ce5')
+        compile('com.github.reportportal:commons-dao:3.2.1')
         compile('com.github.reportportal:commons-rules:3.2.0')
         compile ('com.github.reportportal:commons-model:3.2.0')
         compile ('com.github.reportportal:commons:3.1.0')
