--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=3.2.2-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
-dockerServerUrl=UNIX:/var/run/docker.sock
+dockerServerUrl=unix:///var/run/docker.sock
 org.gradle.jvmargs=-Xmx2048m
