--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -16,6 +16,8 @@ security:
 rp:
   uat:
     serviceUrl: http://uat:8080
+  analyzer:
+    url: http://analyzer:8080
   mongo:
     host: mongodb
     port: 27017
