--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=3.3.1
+version=3.3.2-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=unix:///var/run/docker.sock
