fix launches history

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ endpoints.info.sensitive=false
 endpoints.health.enabled=true   
 endpoints.health.sensitive=true
 endpoints.jmx.enabled=true
-rp.mongo.host=localhost
+rp.mongo.host=evbyminsd6293.minsk.epam.com
 rp.mongo.port=27017
 rp.mongo.dbName=reportportal
 rp.mongo.connectionsPerHost=50
