add quartz support (#261)
* add quartz support

* fix compilation errors in unit tests

* Merge remote-tracking branch 'remotes/origin/develop' into quartz

# Conflicts:
#	src/main/java/com/epam/ta/reportportal/job/InterruptBrokenLaunchesJob.java
#	src/test/java/com/epam/ta/reportportal/job/InterruptBrokenLaunchesJobTest.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,7 @@ endpoints.info.sensitive=false
 endpoints.health.enabled=true   
 endpoints.health.sensitive=true
 endpoints.jmx.enabled=true
-rp.mongo.host=localhost
-rp.mongo.port=27017
+rp.mongo.uri=mongodb://localhost:27017
 rp.mongo.dbName=reportportal
 rp.mongo.connectionsPerHost=50
 rp.mongo.threadsAllowedToBlockForConnectionMultiplier=50
@@ -38,12 +37,15 @@ rp.cache.ticket.size=10000
 rp.cache.ticket.expiration=5
 rp.cache.user.size=1000
 rp.cache.user.expiration=60
+
+## Supported period format details
+## https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-
 #CRON expression for project setting 'interrupt launches' as every 1 hours
-com.ta.reportportal.job.interrupt.broken.launches.cron=0 0 */1 * * *
+com.ta.reportportal.job.interrupt.broken.launches.cron=PT1H
 #CRON expression for project setting 'keep screenshots' as every 7 days
-com.ta.reportportal.job.clean.screenshots.cron=0 0 0 */7 * *
+com.ta.reportportal.job.clean.screenshots.cron=P7D
 #CRON expression for project setting 'keep logs' as every 14 days
-com.ta.reportportal.job.clean.logs.cron=0 0 0 */14 * *
+com.ta.reportportal.job.clean.logs.cron=P14D
 #Expire account after X days
 rp.auth.expire.account.after=5
 ## EMail Server configuration (temporary solution)
