--- a/src/test/resources/unittests.properties
+++ b/src/test/resources/unittests.properties
@@ -15,11 +15,11 @@ rp.mongo.write-timeout=0
 rp.mongo.write-number=1
 rp.mongo.write-fsync=false
 ## CRON expressions for project setting 'interrupt launches' as every 3 hours
-com.ta.reportportal.job.interrupt.broken.launches.cron=0 */10 * * * *
+com.ta.reportportal.job.interrupt.broken.launches.cron=PT3H
 ## CRON expressions for project setting 'keep screenshots' as every 7 days
-com.ta.reportportal.job.clean.screenshots.cron=0 */10 * * * *
+com.ta.reportportal.job.clean.screenshots.cron=P7D
 ## CRON expressions for project setting 'keep logs' as every 14 days
-com.ta.reportportal.job.clean.logs.cron=0  */10 * * * *
+com.ta.reportportal.job.clean.logs.cron=P14D
 ## Expire account after X days
 rp.auth.expire.account.after=5
 ## Cache configuration
@@ -32,6 +32,9 @@ rp.cache.user.expiration=60
 rp.cache.project.info=10
 ## Acceptance index rate for auto-bug analyzer
 rp.issue.analyzer.rate=95
+
+
+spring.quartz.org.quartz.jobStore.class=com.epam.ta.TestConfig$NOPJobStore
 
 
 
