update job settings
Signed-off-by: avarabyeu <andrei.varabyeu@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,9 +43,11 @@ rp.cache.user.expiration=60
 #CRON expression for project setting 'interrupt launches' as every 1 hours
 com.ta.reportportal.job.interrupt.broken.launches.cron=PT1H
 #CRON expression for project setting 'keep screenshots' as every 7 days
-com.ta.reportportal.job.clean.screenshots.cron=P7D
+#com.ta.reportportal.job.clean.screenshots.cron=P7D
+com.ta.reportportal.job.clean.screenshots.cron=PT1H
 #CRON expression for project setting 'keep logs' as every 14 days
-com.ta.reportportal.job.clean.logs.cron=P14D
+#com.ta.reportportal.job.clean.logs.cron=P14D
+com.ta.reportportal.job.clean.logs.cron=PT1H
 #Expire account after X days
 rp.auth.expire.account.after=5
 ## EMail Server configuration (temporary solution)
