--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=3.3.2-SNAPSHOT
+version=4.0.0-BETA-1
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=unix:///var/run/docker.sock
