--- a/src/main/resources/application-dev-mac.yaml
+++ b/src/main/resources/application-dev-mac.yaml
@@ -5,6 +5,8 @@ spring:
         hostname: docker.for.mac.localhost
       host: localhost
 rp:
+  mongo:
+    uri: mongodb://localhost:27017
   uat:
     serviceUrl: http://localhost:8080/uat
   analyzer:
