--- a/src/main/resources/application-dev-win.yaml
+++ b/src/main/resources/application-dev-win.yaml
@@ -6,7 +6,7 @@ spring:
       host: localhost
 rp:
   mongo:
-    host: localhost
+    uri: mongodb://localhost:27017
   uat:
     serviceUrl: http://localhost:8080/uat
   analyzer:
