--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:4.0.0')
+        compile('com.github.reportportal:commons-dao:42e6d61')
         compile('com.github.reportportal:commons-rules:4.0.0')
         compile 'com.github.reportportal:commons-model:4.0.0'
         compile('com.github.reportportal:commons:3.1.0')
