--- a/docker/Dockerfile-release
+++ b/docker/Dockerfile-release
@@ -6,15 +6,15 @@ LABEL description="@description@"
 
 ENV APP_FILE @name@-@version@
 ENV APP_DOWNLOAD_URL https://dl.bintray.com/epam/reportportal/com/epam/reportportal/@name@/@version@/$APP_FILE.jar
-ENV JAVA_OPTS="-Xmx1g -Djava.security.egd=file:/dev/./urandom -jar"
+ENV JAVA_OPTS="-Xmx1g -Djava.security.egd=file:/dev/./urandom"
 ENV JAVA_APP=/app.jar
 
 RUN apt-get update && \
     apt-get install -y fonts-noto && \
     rm -rf /var/lib/apt/lists/*
 
-RUN sh -c "echo '#!/bin/sh \n\
-exec java $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /start.sh"
+RUN echo "#!/bin/sh \n\
+exec java $JAVA_OPTS -jar $JAVA_APP" > /start.sh && chmod +x /start.sh
 
 VOLUME /tmp
 
