--- a/build.gradle
+++ b/build.gradle
@@ -77,8 +77,8 @@ dependencies {
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
         compile('com.github.reportportal:commons-dao:4.0.2')
-        compile('com.github.reportportal:commons-rules:4.0.0')
-        compile 'com.github.reportportal:commons-model:4.0.1'
+        compile('com.github.reportportal:commons-rules:abaa3ad')
+        compile 'com.github.reportportal:commons-model:7585e71'
         compile('com.github.reportportal:commons:3.1.0')
     }
 
