--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -11,8 +11,8 @@ RUN apt-get update && \
     apt-get install -y fonts-noto net-tools && \
     rm -rf /var/lib/apt/lists/*
 
-RUN sh -c "echo '#!/bin/sh \n\
-exec java $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /start.sh"
+RUN echo "#!/bin/sh \n\
+exec java $JAVA_OPTS -jar $JAVA_APP" > /start.sh && chmod +x /start.sh
 
 VOLUME /tmp
 
