--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,21 @@
 server.port=8585
-server.contextPath=/api/v1
+#server.contextPath=/api/v1
 rp.uat.serviceUrl=http://localhost:9999
 security.oauth2.resource.userInfoUri=${rp.uat.serviceUrl}/sso/me
 security.oauth2.client.accessTokenUri=${rp.uat.serviceUrl}/sso/oauth/token
 security.oauth2.client.userAuthorizationUri=${rp.uat.serviceUrl}/sso/oauth/authorize
 security.oauth2.client.clientId=internal
 security.oauth2.client.clientSecret=internal_man
-security.sessions=never
-security.basic.enabled=false
+#security.sessions=never
+#security.basic.enabled=false
 management.contextPath=/admin
-management.security.enabled=false
-endpoints.enabled=false
-endpoints.info.enabled=true
-endpoints.info.sensitive=false
-endpoints.health.enabled=true   
-endpoints.health.sensitive=true
-endpoints.jmx.enabled=true
-rp.mongo.uri=mongodb://localhost:27017
-rp.mongo.dbName=reportportal
-rp.mongo.connectionsPerHost=50
-rp.mongo.threadsAllowedToBlockForConnectionMultiplier=50
-rp.mongo.connectTimeout=20000
-rp.mongo.socketTimeout=60000
-rp.mongo.maxWaitTime=120000
-rp.mongo.autoConnectRetry=true
-rp.mongo.socketKeepAlive=true
-rp.mongo.slaveOk=true
-rp.mongo.writeTimeout=0
-rp.mongo.writeNumber=1
-rp.mongo.writeFsync=false
+#management.security.enabled=false
+#endpoints.enabled=false
+#endpoints.info.enabled=true
+#endpoints.info.sensitive=false
+#endpoints.health.enabled=true
+#endpoints.health.sensitive=true
+#endpoints.jmx.enabled=true
 # Cache configs
 rp.cache.project.size=1000
 rp.cache.project.expiration=1
