--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,7 +24,16 @@ spring:
     org.quartz.jobStore.clusterCheckinInterval: "180000"
     org.quartz.scheduler.instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     org.quartz.scheduler.instanceName: reportportal
-
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    username: rpuser
+    password: rppass
+    url: jdbc:postgresql://localhost:5432/reportportal
+  jpa:
+    properties:
+      hibernate.jdbc.lob.non_contextual_creation: true
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL95Dialect
   cloud:
     consul:
       host: localhost
