--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     compile 'org.jooq:jooq:3.10.4'
     compile 'org.jasypt:jasypt:1.9.2'
 
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-validator:commons-validator:1.6'
