--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,15 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-actuator'
     compile 'org.springframework.cloud:spring-cloud-starter-oauth2'
 
+///// Security
+//    compile 'org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE'
+    compile 'org.springframework.security:spring-security-oauth2-client'
+    compile 'org.springframework.security:spring-security-jwt'
+    compile 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
+    compile 'org.apache.tika:tika-core'
+    compile 'org.apache.tika:tika-parsers'
+///// end of Security
+
     //compile 'org.springframework.data:spring-data-mongodb'
 
     //compile 'com.github.mongobee:mongobee:0.12'
@@ -159,7 +168,7 @@ dependencies {
 
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.2.1'
+    gradleVersion = '4.6'
 }
 
 //Start section for external jacoco test report
