--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "com.github.reportportal:commons-bom:fc981d4"
+        mavenBom "com.github.reportportal:commons-bom:6eb9654"
     }
 }
 
@@ -91,13 +91,12 @@ dependencies {
     }
 
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.7.Final'
-    compile 'org.postgresql:postgresql:42.2.1'
-    compile 'org.jooq:jooq:3.10.5'
-    compile 'org.jasypt:jasypt:1.9.2'
 
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.hibernate:hibernate-validator'
+    compile 'org.postgresql:postgresql'
+    compile 'org.jooq:jooq'
+    compile 'org.jasypt:jasypt:1.9.2'
 
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-validator:commons-validator:1.6'
@@ -105,7 +104,7 @@ dependencies {
 
     compile "ch.qos.logback:logback-classic:${logback}"
     compile 'net.coobird:thumbnailator:0.4.8'
-    compile 'com.sun.mail:javax.mail:1.6.0'
+    compile 'com.sun.mail:javax.mail'
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
     compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.9'
 
@@ -113,30 +112,20 @@ dependencies {
     compile 'org.springframework.retry:spring-retry'
 
     compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
-    compile 'org.springframework.cloud:spring-cloud-starter-security'
-
-
     compile 'org.springframework.boot:spring-boot-starter-aop'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-freemarker'
     compile 'org.springframework.boot:spring-boot-starter-actuator'
-    compile 'org.springframework.cloud:spring-cloud-starter-oauth2'
 
 ///// Security
-//    compile 'org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-security'
+    compile 'org.springframework.cloud:spring-cloud-starter-oauth2'
     compile 'org.springframework.security:spring-security-oauth2-client'
     compile 'org.springframework.security:spring-security-jwt'
-    compile 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
-    compile 'org.apache.tika:tika-core'
-    compile 'org.apache.tika:tika-parsers'
 ///// end of Security
 
-    //compile 'org.springframework.data:spring-data-mongodb'
-
-    //compile 'com.github.mongobee:mongobee:0.12'
-
-    //compile 'org.quartz-scheduler:quartz:2.3.0'
-    //compile "com.novemberain:quartz-mongodb:2.0.0"
+    compile 'org.apache.tika:tika-core'
+    compile 'org.apache.tika:tika-parsers'
 
     compile 'net.sf.jasperreports:jasperreports:6.3.1'
     //JasperReport's export to XLS uses Apache POI. Reports 6.3.1 needs version NOT
@@ -146,10 +135,10 @@ dependencies {
     compile 'javax.inject:javax.inject:1'
     compile 'com.google.code.findbugs:annotations:3.0.1'
 
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    compile 'io.springfox:springfox-swagger-ui'
+    compile 'io.springfox:springfox-swagger2'
 
-    compile 'com.google.guava:guava:23.0'
+    compile 'com.google.guava:guava'
 
     api 'org.jacoco:org.jacoco.agent:0.7.7.201606060606'
 
