--- a/build.gradle
+++ b/build.gradle
@@ -76,9 +76,9 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.4'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:890a603')
+        compile('com.github.reportportal:commons-dao:357c7c1')
         compile('com.github.reportportal:commons-rules:4.0.1')
-        compile 'com.github.reportportal:commons-model:4.0.4'
+        compile 'com.github.reportportal:commons-model:ca05a5d'
         compile('com.github.reportportal:commons:3.1.0')
     }
 
