--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,9 @@ rp.email.auth=false
 rp.email.debug=false
 rp.email.account=
 rp.email.password=
+
+#show sql statement
+logging.level.org.hibernate.SQL=debug
+
+#show sql values
+logging.level.org.hibernate.type.descriptor.sql=trace
