first controller example for new query filter
Signed-off-by: avarabyeu <andrei.varabyeu@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,7 +65,7 @@ logging:
 #    com.novemberain.quartz : debug
     org.springframework.security: debug
 #    org.jooq.tools.LoggerListener: debug
-    root: trace
+    root: warn
 ## Consul as service registry
 ---
 #spring:
